Omnibox: Remove Overly-Aggressive DCHECK (focus must occur before open)

And revise a related histogram.

BUG=635785

Review-Url: https://codereview.chromium.org/2245443002
Cr-Commit-Position: refs/heads/master@{#411733}

Former-commit-id: b0afef87f6ef1567a88011c97ac86dc09db75256